Provided tokenizer class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.0)
 
-project(AdliBeta)
+project(AdliBeta VERSION 0.1.0)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(AdliBeta src/main.cpp)
+add_executable(AdliBeta src/main.cpp src/tokenizer.cpp)
+
+target_include_directories(${PROJECT_NAME} PUBLIC include)
+target_link_directories(${PROJECT_NAME} PUBLIC lib)
