Provided astparser and filereader cpp files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(AdliBeta VERSION 0.1.0)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(AdliBeta src/main.cpp src/tokenizer.cpp)
+add_executable(AdliBeta src/main.cpp src/tokenizer.cpp src/astparser.cpp src/filereader.cpp)
 
 target_include_directories(${PROJECT_NAME} PUBLIC include)
 target_link_directories(${PROJECT_NAME} PUBLIC lib)
