--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,18 @@ project(AdliBeta VERSION 0.1.0)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(AdliBeta main.cpp src/tokenizer.cpp src/astparser.cpp src/filereader.cpp src/astdebug.cpp)
+file(GLOB NODES src/nodes/*.cpp)
+file(GLOB PARSER src/parser/*.cpp)
+
+add_executable(${PROJECT_NAME}
+        main.cpp
+        src/filereader.cpp
+        src/tokenizer.cpp
+        src/node.cpp
+        ${NODES}
+        src/astparser.cpp
+        ${PARSER}
+        src/astdebug.cpp)
 
 target_include_directories(${PROJECT_NAME} PUBLIC include)
 target_link_directories(${PROJECT_NAME} PUBLIC lib)
